[metadata]
name = onde
version = 0.1.0
author = Gauthier de Lesquen
description = a python easy-to-use reactive framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gauthier-de-Lesquen/logicgates.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GnuGPL License
    Operating System :: OS Independent

[options]
packages = find:

python_requires = >=3.0


